@@ -1,13 +1,18 @@
 package com.amritan.backend.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import com.amritan.backend.dto.InterviewDto;
+import com.amritan.backend.dto.PageResponse;
 import com.amritan.backend.entity.Application;
 import com.amritan.backend.entity.Interview;
+import com.amritan.backend.enums.InterviewStatus;
 import com.amritan.backend.exception.ResourceNotFoundException;
 import com.amritan.backend.mapper.InterviewMapper;
 import com.amritan.backend.repository.ApplicationRepository;
@@ -42,12 +47,26 @@ public class InterviewServiceImpl implements InterviewService{
 	}
 	
 	@Override
-	public List<InterviewDto> getAllInterviews() {
-		List<Interview> interviews = interviewRepository.findAll();
+	public PageResponse<InterviewDto> getAllInterviews(int pageNo, int pageSize, String sortBy, String sortDir) {
+		Sort sort = sortDir.equalsIgnoreCase("asc")
+					? Sort.by(sortBy).ascending()
+							: Sort.by(sortBy).descending();
 		
-		return interviews.stream()
-				.map(interviewMapper::mapToDto)
-				.collect(Collectors.toList());
+		Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+		
+		Page<Interview> page = interviewRepository.findAll(pageable);
+		
+		List<InterviewDto> content = page.getContent()
+								.stream()
+								.map(interviewMapper::mapToDto)
+								.toList();
+		
+		return new PageResponse<>( content,
+				page.getNumber(),
+				page.getSize(),
+				page.getTotalElements(),
+	    			page.getTotalPages(),
+	    			page.isLast() );
 	}
 	
 
@@ -89,6 +108,50 @@ public class InterviewServiceImpl implements InterviewService{
 				new ResourceNotFoundException("Interview not found with id : "+id));
 		
 		interviewRepository.delete(interview);
+	}
+
+	
+
+	@Override
+	public PageResponse<InterviewDto> getInterviewByStatus(InterviewStatus status, int pageNo, int pageSize) {
+		Sort sort = Sort.by("id").ascending();
+		
+		Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+		
+		Page<Interview> page = interviewRepository.findByStatus(status, pageable);
+		
+		List<InterviewDto> content = page.getContent()
+								.stream()
+								.map(interviewMapper::mapToDto)
+								.toList();
+		
+		return new PageResponse<>( content,
+	    		page.getNumber(),
+	    		page.getSize(),
+	    		page.getTotalElements(),
+	    		page.getTotalPages(),
+	    		page.isLast() );
+	}
+
+	@Override
+	public PageResponse<InterviewDto> getInterviewer(String keyword, int pageNo, int pageSize) {
+		Sort sort = Sort.by("id").ascending();
+		
+		Pageable pageable = PageRequest.of(pageNo, pageSize, sort);
+		
+		Page<Interview> page = interviewRepository.findByInterviewerContainingIgnoreCase(keyword, pageable);
+		
+		List<InterviewDto> content = page.getContent()
+								.stream()
+								.map(interviewMapper::mapToDto)
+								.toList();
+		
+		return new PageResponse<>( content,
+	    		page.getNumber(),
+	    		page.getSize(),
+	    		page.getTotalElements(),
+	    		page.getTotalPages(),
+	    		page.isLast() );
 	}
 	
 	
